--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@types/pako": "^2.0.0",
+    "js-untar": "^2.0.0",
+    "pako": "^2.0.4"
   }
 }
