--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/npm-package-arg": "^6.1.1",
     "@types/pako": "^2.0.0",
     "js-untar": "^2.0.0",
+    "npm-package-arg": "^9.0.2",
     "pako": "^2.0.4"
   }
 }
