--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fetch-npm-package",
-  "version": "0.0.1",
-  "description": "via js fetch npm package",
+  "version": "1.0.0",
+  "description": "Use js to download and unzip the npm package",
   "main": "dist/fetch.cjs.js",
   "unpkg": "dist/fetch.umd.js",
   "module": "dist/fetch.esm-builder.js",
@@ -25,10 +25,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/imtaotao/node-package-exports.git"
+    "url": "git+https://github.com/imtaotao/fetch-npm-package.git"
   },
   "bugs": {
-    "url": "https://github.com/imtaotao/node-package-exports/issues"
+    "url": "https://github.com/imtaotao/fetch-npm-package/issues"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -44,10 +44,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@types/npm-package-arg": "^6.1.1",
     "@types/pako": "^2.0.0",
-    "js-untar": "^2.0.0",
-    "npm-package-arg": "^9.0.2",
     "pako": "^2.0.4"
   }
 }
